objects/ABB_Sales_Pitch__c.object
<CustomObject>
    <fields>
        <fullName>ABBSalesPitchOwnerName__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABBSalesPitchOwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Angel__c</fullName>
        <label>Angle</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>ABB Sales Pitch</relationshipLabel>
        <relationshipName>ABB_Sales_Pitches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ABB Sales Pitch</label>
    <nameField>
        <displayFormat>ASP-{000000}</displayFormat>
        <label>ABB Sales Pitch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABB Sales Pitches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>